<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_browse_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:deviceIds="tv">

    <androidx.media3.ui.PlayerView
        android:id="@+id/player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:resize_mode="fill"
        app:use_controller="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextClock
                android:id="@+id/textClock"
                android:layout_width="88dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:shadowColor="#80000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.995"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <ImageView
                android:id="@+id/wifi_qr_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.87"
                tools:ignore="ContentDescription,ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/wea_text"
                android:layout_width="88dp"
                android:layout_height="24dp"
                android:layout_marginTop="40dp"
                android:shadowColor="#80000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.995"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/wea_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.982"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/alarm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_bg_yel"
                android:text="@string/alarm"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="100sp"
                android:visibility="gone"
                tools:layout_editor_absoluteX="174dp"
                tools:layout_editor_absoluteY="48dp" />

            <TextView
                android:layout_width="42dp"
                android:layout_height="16dp"
                android:layout_marginBottom="4dp"
                android:shadowColor="#80000000"
                android:shadowDx="3"
                android:shadowDy="4"
                android:shadowRadius="5"
                android:text="WIFI"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/wifi_qr_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.018"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.media3.ui.PlayerView>

    <LinearLayout
        android:id="@+id/buttons_line"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1">

        <Button
            android:id="@+id/live"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/default_main_bac"
            android:focusedByDefault="true"
            android:text="@string/live"
            android:textColor="#FFFFFF"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <Button
            android:id="@+id/vod"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/default_main_bac"
            android:text="@string/vod"
            android:textColor="#FFFFFF"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <Button
            android:id="@+id/hotel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/default_main_bac"
            android:text="@string/hotel"
            android:textColor="#FFFFFF"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <Button
            android:id="@+id/youtube"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/default_main_bac"
            android:text="@string/youtube"
            android:textColor="#FFFFFF"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <Button
            android:id="@+id/control"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/default_main_bac"
            android:text="@string/room_control"
            android:textColor="#FFFFFF"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            tools:ignore="VisualLintButtonSize,VisualLintBounds,TextContrastCheck" />
        <Button
            android:id="@+id/taxi"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/default_main_bac"
            android:text="@string/taxi"
            android:textColor="#FFFFFF"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            tools:ignore="VisualLintButtonSize,VisualLintBounds,TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
